# clipwise

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
assets/: clipwise.desktop
docs/: PRD.md  how_it_works.md
docs/superpowers/plans/: 2026-06-14-global-hotkey-daemon.md
docs/superpowers/specs/: 2026-06-14-global-hotkey-design.md
src/: app.rs  clipboard.rs  ipc.rs  main.rs  storage.rs  theme.rs  ui.rs
