[package]
name = "clipwise"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.28", features = ["default"] }
egui = "0.28"
arboard = "3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4"] }
fuzzy-matcher = "0.3"
crossbeam-channel = "0.5"

[profile.release]
opt-level = 3
lto = true
strip = true
